k8s/apps/media/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jackett:latest
        ports:
        - name: http
          containerPort: 9117
          protocol: TCP
        volumeMounts:
        - name: downloads-volume
          mountPath: /downloads
        - name: config-volume
          mountPath: /config
      volumes:
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: jackett-downloads
      - name: config-volume
        persistentVolumeClaim:
          claimName: jackett-config
