k8s/apps/media/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
  - name: http
    port: 9117
    protocol: TCP
    targetPort: 9117
  type: ClusterIP
